--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -117,11 +117,11 @@
 }
 
 .bottomBanner {
-  margin: 20vh 5vw 3vh 5vw;
+  padding: 20vh 10vh 10vh 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1vw;
+  gap: 5vw;
 }
 
 .bottomBanner div {
@@ -147,6 +147,8 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 140%;
+  margin-top: 2vh;
+  margin-bottom: 4vh;
 }
 
 .bottomBanner div ul li {
@@ -155,6 +157,7 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 150%;
+  margin-top: 2vh;
   /* or 24px */
 
 
@@ -162,8 +165,6 @@
 
   color: #212429;
 }
-
-
 
 
 
@@ -284,25 +285,54 @@
 
 .cards {
   width: 80%;
-  margin: auto;
-  height: 50vh;
-
+  margin: 10vw 0 0 10vw;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
 }
 
-.text--medium {
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  font-weight: 400;
-  color: #ecf0f1;
-}
 
 .card {
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 4%;
+}
+
+.image{
+  background-color: #f0f5fa;
+  clip-path: circle(50% at 50% 50%);
+  padding: 2%;
+  width: 15%;
+  justify-content: center;
+  align-items: center;
+}
+
+.content p {
+  font-family: 'Darker Grotesque';
+  font-weight: 900;
+  font-size: 3.2rem;
+  display: flex;
+  align-items: center;
+  line-height: 110%;
+  color: #212429;
+  margin-bottom: 4%;
+}
+
+
+.content div p {
+  font-family: 'Nunito Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  
+  display: flex;
+  align-items: center;
+  
+  /* bw/color-gray-100 */
+  
+  color: #212429;
 }
 
 .cta {
@@ -324,22 +354,15 @@
   ;
 }
 
-.cta p{
+.cta p {
   color: #FFFFFF;
+  margin-bottom:2vh;
 }
 
 .cta a {
   text-decoration: none;
-  display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding: 1vw 1vh;
-  gap: 0.4vw;
-
-
   box-shadow: 0 4px 0 0 #212429;
-  border-radius: 0px 0px 5px 5px;
 
   height: 5px;
   color: #212429;
@@ -349,11 +372,9 @@
   font-style: normal;
   font-weight: 800;
   font-size: 1.6rem;
-  line-height: 150%;
-  width: 15vw;
   /* highlight/color-highlight-60 */
-
   background: #F2BF4E;
+  padding: 1vh 2vw 1vh 2vw;
 
 
 }
